# drf-api-action

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  conftest.py  coverage.json  create_coverage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: coverage.yaml  pre-commit-on-desired-branch.yaml  pre-commit-on-pr-branch.yaml  tests.yaml
docs/: BUG_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
drf_api_action/: __init__.py  api_utils.py  decorators.py  exceptions.py  fixtures.py  plugin.py  utils.py
drf_api_actions/: decorators.py  mixins.py
resources/: coverage.json  create_coverage.py
tests/: db.sqlite3  tests.py
tests/functionality_tests/: plugin.py  test_as_api.py  test_as_fixture.py  tests.py
tests/test_app/: settings.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py
tests/test_server/: manage.py  settings.py  urls.py
tests/test_server/test_app/: models.py  views.py
